# Final3team-AI

./: .env.example  .env.sample  .gitignore  Dockerfile  README.md  TODO(250916).txt  TODO(250917).txt  TODO(250918).txt  TODO(250926).txt  Todo.txt  api.py  auto_deploy.sh  config.py  deploy_ec2.sh  docker-compose.yml  ec2_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  server.py  test_backend_integration.py  test_chroma_simple.py  test_ec2_chroma.py
.github/workflows/: deploy.yml  github-deploy.yml  slack-notification.yml
app/: main.py
app/agents/: agent1.py  agent2.py
app/api/: health.py  sessions.py  templates.py
app/core/: async_template_generator.py  base_processor.py  basic_template_matcher.py  conversation_manager.py  entity_extractor.py  exceptions.py  index_manager.py  input_validator.py  langgraph_integration.py  langgraph_nodes.py  langgraph_state.py  langgraph_workflow.py  llm_response_cache.py  optimized_session_manager.py  policy_checker.py  public_template_manager.py  template_cache.py  template_generator.py  template_matcher.py  template_preview.py  template_selector.py  template_validator.py
app/dto/: api_result.py
app/tools/: Jober_ai.code-workspace  __init__.py  blacklist_tool.py  coupon_disclaimer_manager.py  industry_classifier.py  info_comm_law_tool.py  intent_classifier.py  joke_detector.py  kakao_variable_validator.py  profanity_checker.py  variable_extractor.py  variable_mapper.py  whitelist_tool.py
app/utils/: ai_input_validator.py  comprehensive_validator.py  data_processor.py  korean_validator.py  (+8 more)
cache/: guidelines.cache  guidelines.faiss  guidelines_vectors.npy  metadata.json  predata.cache  templates.faiss  templates_vectors.npy
chroma_db/: chroma.sqlite3
config/: legacy.py  llm_providers.py  settings.py
csvfile/: [보안 자료] 카카오 알림톡 데이터 취합_2차 텍스트 완료 버전_V1.0_250513.xlsx - Best 템플릿 목록.csv  [보안 자료] 카카오 알림톡 데이터 취합_2차 텍스트 완료 버전_V1.0_250513.xlsx - Jober0411 리스트.csv  [보안 자료] 카카오 알림톡 데이터 취합_2차 텍스트 완료 버전_V1.0_250513.xlsx - 고객이 발송하고 ᄉ.csv  [보안 자료] 카카오 알림톡 데이터 취합_2차 텍스트 완료 버전_V1.0_250513.xlsx - 시트4.csv  [보안 자료] 카카오 알림톡 데이터 취합_2차 텍스트 완료 버전_V1.0_250513.xlsx - 자버에서 반려 받으.csv  [보안 자료] 카카오 알림톡 데이터 취합_2차 텍스트 완료 버전_V1.0_250513.xlsx - 자버에서 승인 받ᄋ.csv  [보안 자료] 카카오 알림톡 데이터 취합_2차 텍스트 완료 버전_V1.0_250513.xlsx - 자주 사용하는 템ᄑ.csv  [보안 자료] 카카오 알림톡 데이터 취합_2차 텍스트 완료 버전_V1.0_250513.xlsx - 타 서비스에서 승인 .csv
data/: advertise_info  advertise_info.md  black_list.md  existing_templates.json  message.md  message_yuisahang.md  run_message.md  temp_fix.json  templates.txt  white_list.md
docs/: ENTERPRISE_SCHEMA_INTEGRATION.md  db_schema.md
notebooks/: html2markdown.ipynb  kisa_spam_guide_pdf2txt.ipynb
output/: bulbeobseupaem_bangji_202403.html  bulbeobseupaem_bangji_202403.json  bulbeobseupaem_bangji_202403.md  bulbeobseupaem_bangji_202403.txt
predata/: cleaned_message.md  cleaned_message_yuisahang.md  cleaned_run_message.md  cleaned_white_list.md
scripts/: debug_agent1_variables.py  debug_template_response.py  ec2_config.py
src/: __init__.py  common_init.py
test_chroma_db/: chroma.sqlite3
tests/: README.md  comprehensive_csv_test.py  conftest.py
(+41 files in other folders)
